--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Listings</title>
+    <link href="./output.css" rel="stylesheet" />
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  </body>
 </html>
