--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,34 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <main class="my-16 max-w-[85%] mx-auto space-y-12">
+      <section
+        id="filter-box"
+        class="hidden flex-wrap gap-4 p-4 bg-white rounded-md"
+      ></section>
+
+      <section class="job">
+        <div class="logo">
+          <img src="../assets/codedamn.jpg" alt="company logo" />
+        </div>
+
+        <div class="my-4 lg:ml-24">
+          <p class="company">Codedamn</p>
+          <p class="position">Full Stack Developer</p>
+          <div class="detail">
+            <p>1d ago</p>
+            <p>Full Time</p>
+            <p>India Only</p>
+          </div>
+        </div>
+
+        <div class="skills">
+          <button class="filter-btn">React</button>
+          <button class="filter-btn">Node</button>
+          <button class="filter-btn">Express</button>
+          <button class="filter-btn">Postgress</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
