--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <section class="job">
         <div class="logo">
-          <img src="../assets/codedamn.jpg" alt="company logo" />
+          <img src="./assets/codedamn.jpg" alt="company logo" />
         </div>
 
         <div class="my-4 lg:ml-24">
